--- a/_includes/social.html
+++ b/_includes/social.html
@@ -33,9 +33,9 @@
 <ul class="social-media-list">
   {%- if site.facebook_username -%}
     <li>
-      <a href="https://www.facebook.com/{{ site.facebook_username }}">
+      <a href="https://www.facebook.com/{{ site.facebook_username }}" style="display: flex; flex-direction: row;">
         <svg class="svg-icon"><use xlink:href="{{ '/assets/social-icons.svg#facebook' | relative_url }}"></use></svg>
-        <span class="username">{{ site.facebook_username| escape }}</span>
+        <span class="username">{{ site.facebook_username | escape }}</span>
       </a>
     </li>
   {%- endif -%}
