--- a/_layouts/boardmember.html
+++ b/_layouts/boardmember.html
@@ -9,7 +9,7 @@
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <img src="/assets/boardmembers/{{page.image_name}}" alt_text={{page.name}} width=300 height=300 style="padding: 10px;" />
+        <img src="/assets/about/boardmembers/{{page.image_name}}" alt_text={{page.name}} width=300 height=300 style="padding: 10px;" />
 
         {{ content }}
       </div>
