--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -77,6 +77,7 @@ $on-laptop:        800px !default;
 // Import partials.
 @import
   "themes/base",
+  "themes/dropdown",
   "themes/layout",
   "themes/syntax-highlighting"
 ;
