update svg path for rename

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,7 +2,7 @@
   {%- if site.facebook_username -%}
     <li>
       <a href="https://www.facebook.com/{{ site.facebook_username }}">
-        <svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#facebook' | relative_url }}"></use></svg>
+        <svg class="svg-icon"><use xlink:href="{{ '/assets/social-icons.svg#facebook' | relative_url }}"></use></svg>
         <span class="username">{{ site.facebook_username| escape }}</span>
       </a>
     </li>
