--- a/_sass/themes/_dropdown.scss
+++ b/_sass/themes/_dropdown.scss
@@ -20,7 +20,6 @@
   padding: 4px;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -29,16 +28,13 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-}
-
-
-.dropdown-content a {
-  margin: 4px;
+  margin-left: 4px;
+  margin-right: 8px;
 }
 
 .dropdown-content a {
   @extend .page-link;
-  padding: 4px;
+  white-space: nowrap;
 }
 
 /* Show the Dropdown Menu on Hover */
