update footer styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,24 +34,17 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-              {{ site.title | escape }}
-          </li>
-          {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          {%- endif -%}
-        </ul>
+    <div class='footer-flex'>
+      <div class="footer-address">
+        <span class="footer-street-address">{{site.street_address}}</span>
+        <span class="footer-city-state-zip">{{site.city}}, {{site.state}} {{site.zip_code}}</span>
       </div>
+      <div class='footer-separator'>•</div>
+      <a class="footer-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
+    </div>
 
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
+    <div class='footer-socials'>
+      {%- include social.html -%}
     </div>
   </div>
 </footer>
