remove syntax highlighting css, there's no code that needs highlighting

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -78,6 +78,5 @@ $on-laptop:        800px !default;
 @import
   "themes/base",
   "themes/dropdown",
-  "themes/layout",
-  "themes/syntax-highlighting"
+  "themes/layout"
 ;
