--- a/_sass/themes/_dropdown.scss
+++ b/_sass/themes/_dropdown.scss
@@ -9,9 +9,8 @@
 .dropdown-button {
   @extend .page-link;
   font-size: 16px;
-  font-size: 16px;
   border: none;
-  background-color: white;
+  background-color: transparent;
   cursor: pointer;
 }
 
