--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,13 +34,14 @@
   <div class="wrapper">
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     <nav class="site-nav">
+      <a class="page-link" rel="author" href="{{ "/" | relative_url }}">Home</a>
       {% include dropdown.html collection="about" title="About" %}
       {% include dropdown.html collection="grants" title="Grants" %}
       {%- assign page_paths = site.pages | sort: "order" | map: "path" -%}
       {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- if my_page.title -%}
-        <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
         {%- endif -%}
       {%- endfor -%}
     </nav>
