--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -41,11 +41,15 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$white-color:           #ffffff !default;
+$grey-color:            #4B4749 !default;
+$blue-color:            #5485A6 !default;
+$black-color:           #111111 !default;
+
+$text-color:       $black-color !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
-$grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
