--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -62,6 +62,7 @@ $content-width:    800px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
+$on-xl-laptop:        1200px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
