--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,17 +34,18 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
-    <div class='footer-flex'>
-      <div class="footer-address">
-        <span class="footer-street-address">{{site.street_address}}</span>
-        <span class="footer-city-state-zip">{{site.city}}, {{site.state}} {{site.zip_code}}</span>
+    <div class='footer-flex-outer'>
+      <div class='footer-flex-inner'>
+        <div class="footer-address">
+          <span class="footer-street-address">{{site.street_address}}</span>
+          <span class="footer-city-state-zip">{{site.city}}, {{site.state}} {{site.zip_code}}</span>
+        </div>
+        <a class="footer-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
       </div>
       <div class='footer-separator'>•</div>
-      <a class="footer-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
-    </div>
-
-    <div class='footer-socials'>
-      {%- include social.html -%}
+      <div class='footer-socials'>
+        {%- include social.html -%}
+      </div>
     </div>
   </div>
 </footer>
