--- a/_sass/themes/_layout.scss
+++ b/_sass/themes/_layout.scss
@@ -42,15 +42,15 @@
 
 .site-title {
   @include relative-font-size(1.625);
+  color: $white-color;
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
 
-  &,
   &:visited {
-    color: $grey-color-dark;
+    color: $white-color;
   }
 }
 
@@ -67,7 +67,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: $white-color;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
