add logo to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,9 @@
         </div>
         <a href="mailto:{{ site.email }}">{{ site.email }}</a>
       </div>
+      <div class='footer-logo'>
+        <img src='/assets/images/logo.png' alt='{{ site.title }}'>
+      </div>
       <div class='footer-socials'>
         {%- include social.html -%}
     </div>
