--- a/_layouts/board-member.html
+++ b/_layouts/board-member.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<img src="/assets/images/about/board-members/{{page.image_name}}" alt_text={{page.name}} width=300 height=300 style="padding: 10px;" />
+<img src="/assets/images/about/board-members/{{page.image_name}}" alt_text={{page.name}} width=300 aspect-ration='1 / 1' style="padding: 10px;" />
 
 {{ content }}
